--- a/vim.html
+++ b/vim.html
@@ -5,8 +5,5 @@
 
 <body>
   <h1>Somura Tips</h1>
-  <h2>Index</h2>
-  <ul>
-    <li><a href="vim.html">Vim</a></li>
-  </ul>
+  <h2>Vim</h2>
 </body>
