--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <header>
   <title>Somura Tips</title>
+  <script src="./modules/title.html" type="module"></script>
 </header>
 
 <body>
-  <h1>Somura Tips</h1>
+  <pagetitle />
   <h2>Index</h2>
   <ul>
-    <li><a href="vim.html">Vim</a></li>
+    <li><a href="./pages/vim.html">Vim</a></li>
   </ul>
 </body>
