--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <header>
-  <title>Somura Tips</title>
-  <script src="./modules/title.html" type="module"></script>
+  <title>The Knowledge</title>
 </header>
 
 <body>
-  <pagetitle />
+  <h1>The Knowledge</h1>
   <h2>Index</h2>
   <ul>
-    <li><a href="./pages/vim.html">Vim</a></li>
+    <li><a href="https://github.com/SOmura-KIT/SOmura-KIT.github.io/blob/main/pages/vim/vim.md">Vim/Neovim</a></li>
   </ul>
 </body>
