--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <h2>Index</h2>
   <ul>
     <li><a href="https://github.com/SOmura-KIT/SOmura-KIT.github.io/blob/main/pages/vim/vim.md">Vim/Neovim</a></li>
+    <li><a href="https://github.com/SOmura-KIT/SOmura-KIT.github.io/blob/main/pages/linux/linux.md">Linux</a></li>
   </ul>
 </body>
